--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@next/font": "^13.0.6",
     "@reduxjs/toolkit": "^1.9.1",
+    "@types/js-cookie": "^3.0.2",
     "axios": "^1.2.0",
+    "js-cookie": "^3.0.1",
     "next": "13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
