--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/font": "^13.0.6",
+    "@next/font": "^13.1.1",
     "@reduxjs/toolkit": "^1.9.1",
     "@types/js-cookie": "^3.0.2",
     "axios": "^1.2.0",
     "js-cookie": "^3.0.1",
-    "next": "13.0.6",
+    "next": "^13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5"
