--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "lint:es": "eslint ./app/**",
-    "lint:fix": "eslint ./app/** --fix"
+    "lint:fix": "eslint ./app/** --fix",
+    "test": "jest"
   },
   "dependencies": {
     "@next/font": "^13.1.1",
@@ -22,6 +23,7 @@
     "react-redux": "^8.0.5"
   },
   "devDependencies": {
+    "@types/jest": "^29.4.0",
     "@types/node": "^18.11.10",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
@@ -31,8 +33,10 @@
     "eslint-config-next": "^13.0.6",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^29.4.0",
     "prettier": "^2.8.3",
     "sass": "^1.56.1",
+    "ts-jest": "^29.0.5",
     "typescript": "^4.9.3"
   }
 }
