--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "lint:es": "eslint ./app/**",
-    "lint:fix": "eslint ./app/** --fix",
+    "lint:es": "eslint ./src/**",
+    "lint:fix": "eslint ./src/** --fix",
     "test": "jest"
   },
   "dependencies": {
     "@next/font": "^13.1.1",
+    "@react-oauth/google": "^0.7.1",
     "@reduxjs/toolkit": "^1.9.1",
     "@types/js-cookie": "^3.0.2",
     "axios": "^1.2.0",
